--- a/ManageBloodTypes/Views/Doctor/Information.cshtml
+++ b/ManageBloodTypes/Views/Doctor/Information.cshtml
@@ -1,4 +1,4 @@
-﻿@model ManageBloodTypes.Models.ThongTinCaNhanModels
+﻿﻿@model ManageBloodTypes.Models.ThongTinCaNhanModels
 
 @{
     ViewBag.Title = "Information";
@@ -9,14 +9,7 @@
 
     <div class="pagetitle">
         <h1>Thông Tin Cá Nhân</h1>
-        @*<nav>
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item">Users</li>
-                    <li class="breadcrumb-item active">Profile</li>
-                </ol>
-            </nav>*@
-    </div><!-- End Page Title -->
+    </div>
 
     <section class="section profile">
         <div class="row">
@@ -62,8 +55,6 @@
                         <div class="tab-content pt-2">
 
                             <div class="tab-pane fade show active profile-overview" id="profile-overview">
-
-                                @*<h5 class="card-title">Thông Tin Chi Tiết</h5>*@
 
                                 <div class="row" style="padding-top: 20px;">
                                     <div class="col-lg-3 col-md-4 label">Giới tính:</div>
@@ -398,5 +389,3 @@
     });
 
 </script>
-
-
