--- a/ManageBloodTypes/Views/Doctor/UpdateUserProfile.cshtml
+++ b/ManageBloodTypes/Views/Doctor/UpdateUserProfile.cshtml
@@ -1,4 +1,4 @@
-﻿@model ManageBloodTypes.Models.ThongTinCaNhanModels
+﻿﻿@model ManageBloodTypes.Models.ThongTinCaNhanModels
 
 @{
     ViewBag.Title = "UpdateUserProfile";
@@ -183,5 +183,3 @@
 
 
 </script>
-
-
