--- a/ManageBloodTypes/Views/ForgotPassword/ForgotPassword.cshtml
+++ b/ManageBloodTypes/Views/ForgotPassword/ForgotPassword.cshtml
@@ -7,9 +7,9 @@
 
 
 <div class="zidbody">
-    <div class="zid_loginform" style="position: relative; ">
+    <div class="zid_loginform2" style="position: relative; ">
 
-        <h2 class=" formheader" style="font-weight: bold; text-align: center; margin-bottom: 25px; ">Quên thông tin tài khoản</h2>
+        <h2 class=" formheader" style="font-weight: bold; text-align: center; margin-bottom: 25px; font-size: 25px; ">Quên thông tin tài khoản</h2>
 
         <form id="frmForgotInfo" name="frmForgotInfo" action="@Url.Action("ForgotPassword", "ForgotPassword")" method="post">
             <input type="hidden" name="tokenCaptcha" id="tokenCaptcha" value="">
@@ -45,7 +45,10 @@
                 <span class="Notice" id="sVerifyCode_err" style="max-width: 200px;">&nbsp;</span>
             </div>
             <div class=" zidfbot">
-                <button type="submit">Gửi</button>
+                <button class="zidnextbtn" type="submit" tabindex="3">Gửi</button>
+                <div class="backtologin" style="background-color: #f0f0f0; padding: 10px;">
+                    Trở về <a href="/Home/Index" onclick="zid.goLogin();"><strong>Trang chủ</strong></a> để đăng nhập.
+                </div>
                 @*<a title="Gửi" class="zidnextbtn" href="javascript:void(0)" onclick="checkValidForm();" tabindex="6"></a>*@
             </div>
         </form>
