--- a/ManageBloodTypes/Views/ForgotPassword/PasswordSent.cshtml
+++ b/ManageBloodTypes/Views/ForgotPassword/PasswordSent.cshtml
@@ -1,7 +1,71 @@
 ﻿
 @{
     ViewBag.Title = "Mật khẩu đã được gửi";
+    Layout = "~/Views/Shared/_Layout_Login.cshtml";
 }
 
-<h2>Mật khẩu mới của bạn đã được gửi đến email của bạn.</h2>
-<p>Vui lòng kiểm tra hộp thư đến và làm theo hướng dẫn để đăng nhập.</p>
+@*<h2>Mật khẩu mới của bạn đã được gửi đến email của bạn.</h2>
+<p>Vui lòng kiểm tra hộp thư đến và làm theo hướng dẫn để đăng nhập.</p>*@
+
+<div class="zidbody">
+    <div class="zid_loginform1" style="position: relative; ">
+
+        <h1 class=" formheader" style="font-weight: bold; text-align: center; margin-bottom: 25px; ">Mật khẩu mới của bạn đã được gửi đến email của bạn</h1>
+        <h3>Vui lòng kiểm tra hộp thư đến và làm theo hướng dẫn để đăng nhập.</h3>
+        <div class="backtologin" style="background-color: #f0f0f0; padding: 10px;">
+            Trở về <a href="/Home/Index" onclick="zid.goLogin();"><strong>Trang chủ</strong></a> để đăng nhập.
+        </div>
+        <!--<form id="frmForgotInfo" name="frmForgotInfo" action="@Url.Action("ForgotPassword", "ForgotPassword")" method="post">
+        <input type="hidden" name="tokenCaptcha" id="tokenCaptcha" value="">
+        <label class="zidfglb" style="font-weight: normal;font-size: 16px;">
+            <strong>Email đăng nhập: </strong>
+        </label>
+        <p class="finput zidforgotinput" style="position: relative; margin-bottom: 5px;">
+            <input class="input_login" type="text" tabindex="1" name="aliasname" id="sAliasName" maxlength="100" value="" required>
+            <span id="sAliasName_icon" style="display: none;position: absolute;right: 10px;top:15px;">
+                <img src="/Content/img/checkbullet.gif" alt="finish">
+            </span>
+        </p>
+        <span id="sAliasName_note" style="display:none;"></span>
+        <div id="acnLikePhone" style="float: right;font-weight: normal;font-size: 12px;padding-bottom: 5px;display: none;">
+            <input id="acnLikePhone_check" type="checkbox" value="true" name="acnLikePhone" tabindex="2" style="vertical-align: middle;"> Đây là Email đăng nhập
+        </div>
+        <span class="Notice" id="sAliasName_err" style="width: 330px; height: 20px; margin-bottom: 15px;">&nbsp;</span>
+        <div class="zidfg_captchapic">
+            <label class="zidfglb">Mã kiểm tra:</label>
+            <div class="captchaborder" style="margin-top: -2px;">
+                <p class="catchacode"> <img src="" id="sVerifyImg" alt="mã kiểm tra"> </p>
+                <p class="captcha_refresh"><a title="Tạo mã kiểm tra khác" href="javascript:void(0)" onclick="refreshCaptcha2();"></a></p>
+            </div>
+        </div>
+        <div class="zidfg_entercaptcha">
+            <label class="zidfglb">Nhập mã kiểm tra:</label>
+            <p class=" finput zidforgotinput" style="position: relative">
+                <input class="input_login" id="sVerifyCode" tabindex="5" maxlength="6" name="captcha" required>
+                <span id="sVerifyCode_icon" style="display: none;position: absolute;right: 10px;top:15px;">
+                    <img src="/Content/img/checkbullet.gif" alt="finish">
+                </span>
+            </p>
+            <span class="Notice" id="sVerifyCode_err" style="max-width: 200px;">&nbsp;</span>
+        </div>
+        <div class=" zidfbot">
+            <button type="submit">Gửi</button>-->
+        @*<a title="Gửi" class="zidnextbtn" href="javascript:void(0)" onclick="checkValidForm();" tabindex="6"></a>*@
+        <!--</div>
+    </form>
+    <div class="clr"></div>
+    <div>-->
+        <!--errAliasCode is index of array AliasName_Error in general.js file-->
+        <!--<input type="hidden" id="errAlias" value="">-->
+        <!--errCaptchaCode is index of array Verify_Error in general.js file-->
+        <!--<input type="hidden" id="errCaptcha" value="">-->
+        <!--Signal to set attribute check forgotType-->
+        <!--<input type="hidden" id="forgotType" value="">
+    </div>
+    <script language="javascript" type="text/javascript" src="/Content/js/general-1.07.js"></script>
+    <script language="javascript" type="text/javascript" src="/Content/js/forgot_info_index-1.03.js"></script>
+    <script language="javascript" type="text/javascript">
+        refreshCaptcha2();
+    </script>-->
+    </div>
+</div>
