--- a/ManageBloodTypes/Views/Home/Index.cshtml
+++ b/ManageBloodTypes/Views/Home/Index.cshtml
@@ -104,11 +104,11 @@
                 <p1>
                     SĐT : 0987.654.321
                     <br />
-                    Email: lala@gmail.com
-                    <br>
+                    Email: cqt17112003@gmail.com
+                    @*<br>
                     Hướng dẫn Khai báo thông tin  <strong><a href="http://123.30.25.155/hdsd.pdf" target="_blank">Tại đ&acirc;y</a></strong>
                     <br>
-                    Hướng dẫn truy cập Tra cứu thông tin: <strong><a href="http://123.30.25.155/smartphone.pdf" target="_blank">Tại đ&acirc;y</a></strong>
+                    Hướng dẫn truy cập Tra cứu thông tin: <strong><a href="http://123.30.25.155/smartphone.pdf" target="_blank">Tại đ&acirc;y</a></strong>*@
                 </p1>
             </div>
         </form>
