--- a/ManageBloodTypes/Views/Shared/_Layout_Home.cshtml
+++ b/ManageBloodTypes/Views/Shared/_Layout_Home.cshtml
@@ -49,7 +49,7 @@
                 <span class="d-none d-lg-block">niceadmin</span>
             </a>*@
             <i class="bi bi-list toggle-sidebar-btn"></i>
-            <a href="/HomePage/Home" @*class="logo d-flex align-items-center"*@ class="responsive-title">
+            <a href="https://localhost:44381/" @*class="logo d-flex align-items-center"*@ class="responsive-title">
                 @*<img src="/Content/img/logo.png" alt="">*@
                 <span class="d-none d-lg-block""><strong>  TRANG KHAI BÁO THÔNG TIN CÁ NHÂN</strong></span>
             </a>
